--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compress-images": "node script/convert-image.cjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -20,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.0",
+    "sharp": "^0.34.3",
     "sonner": "^2.0.6",
     "split-type": "^0.3.4",
     "tailwindcss": "^4.1.7",
